--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -348,10 +348,10 @@
                                         <label for="email">Email Address</label>
                                     </td> -->
                                     <td>
-                                        <input type="text" id="email" class="form-control" placeholder="Email Address" />
+                                        <input type="email" id="email" class="form-control" placeholder="Email Address" />
                                     </td>
                                     <td>
-                                        <input type="text" id="mobile-number" class="form-control" placeholder="Mobile Number" />
+                                        <input type="tel" id="mobile-number" class="form-control" placeholder="Mobile Number" />
                                     </td>
                                     <!-- <td>
                                         <label for="username">New Username</label>
@@ -367,7 +367,7 @@
                                 </tr>
                                 <tr>
                                     <td colspan="2">
-                                        <input type="text" id="username" class="form-control" placeholder="New Username" />
+                                        <input type="text" id="username" class="form-control" placeholder="New Username" autocomplete="username" />
                                     </td>
                                 </tr>
                                 <tr>
@@ -375,7 +375,7 @@
                                         <label for="password">New Password</label>
                                     </td> -->
                                     <td>
-                                        <input type="password" id="password" class="form-control" placeholder="New Password" />
+                                        <input type="password" id="password" class="form-control" placeholder="New Password" autocomplete="new-password" />
                                     </td>
                                     <!-- <td>
                                         <label for="password-confirm">Confirm Password</label>
