--- a/mainapp/templates/mainapp/dataentry.html
+++ b/mainapp/templates/mainapp/dataentry.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="flex-container blockwise">
         <div class="box-section">
-            <div class="box-section-head">Sample Form</div>
+            <div class="box-section-head">Data Entry</div>
             <div class="box-section-body">
                 <!-- <p>The following is a sample placeholder form for the template.</p> -->
                 <form class="marg-top marg-bottom">
