--- a/mainapp/templates/mainapp/result.html
+++ b/mainapp/templates/mainapp/result.html
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="flex-container blockwise">
         <div class="box-section">
-            <div class="box-section-head">Sample Table</div>
+            <div class="box-section-head">Overall Result</div>
             <div class="box-section-body">
                 <p>The following is a sample placeholder table for the template.</p>
                 <div class="table-responsive marg-bottom">
