--- a/mainapp/templates/mainapp/layout.html
+++ b/mainapp/templates/mainapp/layout.html
@@ -7,7 +7,7 @@
     <meta id="viewport" name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="{% static 'mainapp/style.css' %}" />
     <link rel="stylesheet" href="{% static 'mainapp/style-bt.css' %}" />
-    <link rel="icon" type="image/png" href="{% static 'mainapp/iub_logo.jpg' %}" />
+    <link rel="icon" type="image/png" href="{% static 'mainapp/images/iub_logo.jpg' %}" />
     <script src="{% static 'mainapp/script.js' %}"></script>
     <script src="{% static 'mainapp/node_modules/chart.js/dist/Chart.js' %}"></script>
 </head>
@@ -17,7 +17,7 @@
     <nav class="heading">
         <ul class="heading-ul">
             <li class="heading-li heading-logo stay">
-                <a class="heading-logo-li title" href=""><img src="{% static 'mainapp/iub_logo.png' %}" height="50px" /></a>
+                <a class="heading-logo-li title" href=""><img src="{% static 'mainapp/images/iub_logo.png' %}" height="50px" /></a>
             </li>
             <li class="heading-li stay"><a class="title" href=""><span class="title-full-name">Student Performance
                         Monitor</span><span class="title-short-name">SPM</span></a></li>
