--- a/mainapp/templates/mainapp/login.html
+++ b/mainapp/templates/mainapp/login.html
@@ -7,13 +7,13 @@
     <meta id="viewport" name="viewport" content ="width=device-width" />
     <!-- <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="{% static 'mainapp/style-login.css' %}" />
-    <link rel="icon" type="image/png" href="{% static 'mainapp/iub_logo.jpg' %}" />
+    <link rel="icon" type="image/png" href="{% static 'mainapp/images/iub_logo.jpg' %}" />
 </head>
 
 <body>
     <div class="body rounded">
         <form style="text-align: center; width: 330px;">
-            <img src="{% static 'mainapp/iub_logo.png' %}" width="150px" />
+            <img src="{% static 'mainapp/images/iub_logo.png' %}" width="150px" />
             <h1>Welcome to SPM</h1>
             <div style="text-align: left;">
                 <div class="form-group">
