--- a/mainapp/templates/mainapp/login.html
+++ b/mainapp/templates/mainapp/login.html
@@ -3,7 +3,7 @@
 <html lang="en" style="height: 100%; ">
 
 <head>
-    <title>Login</title>
+    <title>Login | SPM</title>
     <meta id="viewport" name="viewport" content ="width=device-width" />
     <!-- <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="{% static 'mainapp/style-login.css' %}" />
