remove hover option of heading dropdown

--- a/mainapp/static/mainapp/style.css
+++ b/mainapp/static/mainapp/style.css
@@ -105,10 +105,10 @@ li.heading-logo {
     font-size: 16px;
 }
 
-.heading-dropdown:hover {
+/* .heading-dropdown:hover {
     background-color: #cccccf;
     color: black;
-}
+} */
 
 .heading-dropdown-icon {
     display: block;
