add user role template

--- a/mainapp/templates/mainapp/layout.html
+++ b/mainapp/templates/mainapp/layout.html
@@ -24,13 +24,13 @@
             <li>
                 <div class="heading-dropdown">
                     <span class="heading-dropdown-icon">
-                        <svg width="25px" height="25px" viewBox="0 0 16 16" class="bi bi-person-fill"
+                        <svg width="32px" height="32px" viewBox="0 0 16 16" class="bi bi-person-fill"
                             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
                                 d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                         </svg>
                     </span>
-                    <span class="heading-dropdown-text">Username</span>
+                    <span class="heading-dropdown-text">Username <br /><small>(Student)</small></span>
                 </div>
             </li>
             <li class="stay" id="more-bar">
