--- a/mainapp/static/mainapp/style.css
+++ b/mainapp/static/mainapp/style.css
@@ -113,15 +113,15 @@ li.heading-logo {
 .heading-dropdown-icon {
     display: block;
     float: left;
-    padding-top: 15px;
+    padding-top: 13px; /* 15px; */
     padding-left: 15px;
-    padding-right: 5px;
+    padding-right: 8px;
 }
 
 .heading-dropdown-text {
     display: block;
     float: left;
-    padding-top: 19px;
+    padding-top: 8px; /* 19px; */
     padding-right: 20px;
     color: black;
     text-decoration: none;
