--- a/mainapp/templates/mainapp/layout.html
+++ b/mainapp/templates/mainapp/layout.html
@@ -17,7 +17,9 @@
     <nav class="heading">
         <ul class="heading-ul">
             <li class="heading-li heading-logo stay">
-                <a class="heading-logo-li title" href="{% url 'dashboard' %}"><img src="{% static 'mainapp/images/iub_logo.png' %}" height="50px" /></a>
+                <a class="heading-logo-li title" href="{% url 'dashboard' %}">
+                    <img src="{% static 'mainapp/images/iub_logo.png' %}" height="50px" />
+                </a>
             </li>
             <li class="heading-li stay">
                 <a class="title" href="{% url 'dashboard' %}">
