--- a/mainapp/templates/mainapp/layout.html
+++ b/mainapp/templates/mainapp/layout.html
@@ -36,7 +36,7 @@
                                 d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                         </svg>
                     </span>
-                    <span class="heading-dropdown-text">Username <br /><small>(Student)</small></span>
+                    <span class="heading-dropdown-text">{{ userfullname }} <br /><small>({{ usertype }})</small></span>
                 </div>
             </li>
             <li class="stay" id="more-bar">
@@ -114,7 +114,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="{% url 'logoutpage' %}">
                         <span class="sidebar-logo">
                             <svg viewBox="0 0 16 16" class="bi bi-door-open" fill="currentColor"
                                 xmlns="http://www.w3.org/2000/svg">
