--- a/mainapp/templates/mainapp/layout.html
+++ b/mainapp/templates/mainapp/layout.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="{% static 'mainapp/images/iub_logo.jpg' %}" />
     <script src="{% static 'mainapp/script.js' %}"></script>
     <script src="{% static 'mainapp/node_modules/chart.js/dist/Chart.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/google-palette/1.1.0/palette.js"></script>
 </head>
 
 <body>
