add faculty view

--- a/mainapp/templates/mainapp/dataentry.html
+++ b/mainapp/templates/mainapp/dataentry.html
@@ -1,4 +1,4 @@
-{% extends "mainapp/layout.html" %}
+{% extends "mainapp/facultylayout.html" %}
 {% block title %}Data Entry{% endblock %}
 {% block body %}
     <div class="flex-container blockwise">
