--- a/mainapp/templates/mainapp/studentdashboard.html
+++ b/mainapp/templates/mainapp/studentdashboard.html
@@ -1,4 +1,4 @@
-{% extends "mainapp/facultylayout.html" %}
+{% extends "mainapp/studentlayout.html" %}
 {% block title %}Dashboard{% endblock %}
 {% block body %}
     <div class="flex-container gridwise">
