--- a/mainapp/templates/mainapp/facultydashboard.html
+++ b/mainapp/templates/mainapp/facultydashboard.html
@@ -3,16 +3,16 @@
 {% block body %}
     <div class="flex-container gridwise">
         <div class="box-item blue">
-            <span><b>Students:</b><br />200</span>
+            <span><b>Courses:</b><br />{{ a }}</span>
         </div>
         <div class="box-item red">
-            <span><b>Faculties:</b><br />20</span>
+            <span><b>Sections:</b><br />{{ b }}</span>
         </div>
         <div class="box-item green">
-            <span><b>Admin:</b><br />1</span>
+            <span><b>Success Rate:</b><br />{{ c }}</span>
         </div>
         <div class="box-item orange">
-            <span><b>UGC:</b><br />1</span>
+            <span><b>No. PLOs Taught:</b><br />{{ d }}</span>
         </div>
     </div>
     <div id="inner-section" class="gridwise-container blockwise">
