--- a/mainapp/templates/mainapp/coursereport.html
+++ b/mainapp/templates/mainapp/coursereport.html
@@ -5,9 +5,22 @@
         <div class="box-section">
             <div class="box-section-head">Course Verdict Table</div>
             <div class="box-section-body">
+                <form class="marg-top marg-bottom" action="coursereportresult" method="post">
+                    {% csrf_token %}
+                    <table class="form-table">
+                        <tr>
+                            <td class="form-field">
+                                <input type="text" id="course-id" name="course-id" class="form-control" placeholder="Course ID" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: center;" class="last-row" colspan="2"><button class="btn btn-primary">Search</button></td>
+                        </tr>
+                    </table>
+                </form>
                 {% comment %} <p>The following is a sample placeholder table for the template.</p> {% endcomment %}
-                <p><b>Number of Students:</b> {{ verdictTotal }}</p>
-                <div class="table-responsive marg-bottom">
+                <p id="inner1"><b>Number of Students:</b> {{ verdictTotal }}</p>
+                <div id="inner2" class="table-responsive marg-bottom">
                     <table class="table table-bordered table-striped table-sm" style="text-align: center;">
                         <thead>
                             <tr>
@@ -49,6 +62,12 @@
         if ({{ scripttag }}) {
             let dataentryli = document.querySelector('#dataentryli');
             dataentryli.style = 'display: none;';
+        }
+        if ({{ searchtag }}) {
+            let inner1 = document.querySelector('#inner1');
+            inner1.style = 'display: none;';
+            let inner2 = document.querySelector('#inner2');
+            inner2.style = 'display: none;';
         }
     </script>
     <script>
