--- a/mainapp/templates/mainapp/facultystudentreport.html
+++ b/mainapp/templates/mainapp/facultystudentreport.html
@@ -3,10 +3,23 @@
 {% block body %}
     <div class="flex-container blockwise">
         <div class="box-section">
-            <div class="box-section-head">PLO Achievement Table</div>
+            <div class="box-section-head">Student Report</div>
             <div class="box-section-body">
+                <form class="marg-top marg-bottom" action="facultystudentreportresult" method="post">
+                    {% csrf_token %}
+                    <table class="form-table">
+                        <tr>
+                            <td class="form-field">
+                                <input type="text" id="student-id" name="student-id" class="form-control" placeholder="Student ID" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: center;" class="last-row" colspan="2"><button class="btn btn-primary">Search</button></td>
+                        </tr>
+                    </table>
+                </form>
                 {% comment %} <p>The following is a sample placeholder table for the template.</p> {% endcomment %}
-                <div class="table-responsive marg-bottom marg-top">
+                <div id="inner" class="table-responsive marg-bottom marg-top">
                     <table class="table table-bordered table-striped table-sm" style="text-align: center;">
                         <thead>
                             <tr>
@@ -55,6 +68,10 @@
         if ({{ scripttag }}) {
             let dataentryli = document.querySelector('#dataentryli');
             dataentryli.style = 'display: none;';
+        }
+        if ({{ searchtag }}) {
+            let inner = document.querySelector('#inner');
+            inner.style = 'display: none;';
         }
     </script>
     <script>
