--- a/mainapp/templates/mainapp/facultydashboard.html
+++ b/mainapp/templates/mainapp/facultydashboard.html
@@ -9,7 +9,7 @@
             <span><b>Sections:</b><br />{{ b }}</span>
         </div>
         <div class="box-item green">
-            <span><b>Success Rate:</b><br />{{ c }}</span>
+            <span><b>Success Rate:</b><br />{{ c }}%</span>
         </div>
         <div class="box-item orange">
             <span><b>No. PLOs Taught:</b><br />{{ d }}</span>
