--- a/mainapp/templates/mainapp/studentdashboard.html
+++ b/mainapp/templates/mainapp/studentdashboard.html
@@ -12,7 +12,7 @@
             <span><b>Lowest PLO:</b><br />{{ c }}</span>
         </div>
         <div class="box-item orange">
-            <span><b>Success Rate:</b><br />{{ d }}</span>
+            <span><b>Success Rate:</b><br />{{ d }}%</span>
         </div>
     </div>
     <div id="inner-section" class="gridwise-container blockwise">
